# UBC-ELEC-542-Coursework

./: .gitignore  LICENSE  README.md
assignment-1/: analytical-wave-function-plot.pgf  assignment1.tex  assignment1.txt  numerical-solution-1-wave-function-plot.pgf  numerical-solution-2-wave-function-plot.pgf  numerical-solution-3-wave-function-plot.pgf  plots.py
assignment-2/: assignment2.tex  assignment2.txt  exact-hartree-fock-sim.py  fock-discretization.py  h2_N14_l5.xyzp  h2_N28_l1.xyzp  h2_N28_l5.xyzp  h2_N32_l1.xyzp  h2_N32_l10.xyzp  h2_N32_l5.xyzp  he_N28_l1.xyzp  he_N28_l5.xyzp  he_N32_l1.xyzp  he_N32_l10.xyzp  he_N32_l5.xyzp  run-sims.bat  sample_sparse_matrix.txt
assignment-3/: assignment3.tex  assignment3.txt  basis-hartree-fock-sim.py  h2_integrals.json  he_integrals.json  refs.bib
project/: exact-hartree-fock-sim.py  notes.md  notes.txt  proposal.tex  pyscf_testbench.py  refs.bib  results_initial.csv  results_initial.xlsx
project/c/: CMakeLists.txt  config.hpp  console.cpp  console.hpp  kernel.cu  kernel.h  main.c  main.cpp  main.hpp  perfmon.hpp  randomize.cpp  randomize.h  run_tests.sh  version.hpp.in
project/cpp/: CMakeLists.txt  config.hpp  console.cpp  kernel.cu  main.cpp  perfmon.hpp  results.csv  run_tests.sh
project/latex/proposal/: proposal.tex  refs.bib
project/latex/report/: formated_results.xlsx  refs.bib  report.tex
project/presentation/: fock-eigen.eps  fock-eq.eps  fock-eqs.xcf  outline.md
project/python/: exact-hartree-fock-sim.py
